<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">student@example.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_progress">00:00</string>
    <string name="favorites_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="empty_media_library">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create_playlist">Создание плейлиста</string>
    <string name="name_playlist_create">Название*</string>
    <string name="description">Описание</string>
    <string name="create_new_playlist">Создать</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="finish_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="finish_playlist_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="share">Поделиться</string>
    <string name="menu">Меню</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
    <string name="playlist_info">%1$s мин • %2$d треков</string>
    <string name="playlist">Плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_empty_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_tracks_count">%1$d треков</string>
    <string name="playlist_info_format">%1$s минут • %2$d треков</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="delete_track_title">Удалить трек?</string>
    <string name="delete_track_message">%1$s</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="track_share_format">%1$d. %2$s - %3$s (%4$s)</string>
</resources>