<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.presentation.fragments.MediaLibraryFragment"
        android:label="@string/media_library">

        <action
            android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />

    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.fragments.SearchFragment"
        android:label="@string/search" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.fragments.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.fragments.CreatePlaylistFragment"
        android:label="@string/create_playlist">

        <argument
            android:name="playlistId"
            android:defaultValue="-1L"
            app:argType="long" />

    </fragment>

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.playlistmaker.presentation.fragments.PlaylistFragment"
        android:label="@string/playlist">

        <argument
            android:name="playlistId"
            app:argType="long" />

    </fragment>

    <action
        android:id="@+id/action_global_createPlaylistFragment"
        app:destination="@id/createPlaylistFragment" />

    <action
        android:id="@+id/action_global_playlistFragment"
        app:destination="@id/playlistFragment" />

</navigation>