<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_primary">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_medium">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_arrow_24"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            style="@style/TextAppearance.PlaylistMaker.Title" />

    </LinearLayout>

    <!-- Поле поиска -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_field_bg"
        android:paddingHorizontal="10dp" >

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@null"
            app:tint="@color/search_icon_color" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="6dp">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="24dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:hint="@string/search_hint"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/blackSearch"
                android:textSize="@dimen/text_size_body"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/btn_clear_search"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_search_clear"
                android:contentDescription="@null"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:tint="@color/search_icon_color"
                android:visibility="gone" />


        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_placeholder_no_results" />

        <TextView
            android:id="@+id/placeholder_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_regular" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/spacing_small"
        android:overScrollMode="never"
        android:clipToPadding="false" />

</LinearLayout>